--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "description": "Fill in the missing Chinese translations for xivanalysis.",
+  "homepage": "https://github.com/Tanimodori/xivanalysis-zh#readme",
+  "bugs": {
+    "url": "https://github.com/Tanimodori/xivanalysis-zh/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tanimodori/xivanalysis-zh.git"
+  },
   "license": "MIT",
   "author": "Tanimodori",
   "type": "module",
